v-next/hardhat-typechain/test/fixture-projects/compilation-error/contracts/Invalid.sol
// SPDX-License-Identifier: MIT
pragma solidity ^0.8.0;

contract Invalid {
  // Missing closing brace - syntax error
  function broken() external {
}
